--- a/src/styles/FoodieFacts.css
+++ b/src/styles/FoodieFacts.css
@@ -1,70 +1,54 @@
-body {
-    font-size: small;
-    line-height: 1.4;
-  }
-  p {
-    margin: 0;
-  }
-  .nutriFactBox {
-      border: thick gold;
-  }
-  .performance-facts {
-      background-color: aliceblue;
-    border: 1px solid black;
-    margin: 20px;
-    float: left;
-    width: 280px;
-    padding: 0.5rem;
-}
-    table {
-      border-collapse: collapse;
-    
-  }
-  .performance-facts__title {
-    font-weight: bold;
-    font-size: 2rem;
-    margin: 0 0 0.25rem 0;
-  }
-  .performance-facts__header {
-    border-bottom: 10px solid black;
-    padding: 0 0 0.25rem 0;
-    margin: 0 0 0.5rem 0;
-    
-  }
-  .performance-facts__table {
-    width: 100%;
-    }
-    th, td {
-      font-weight: normal;
-      text-align: left;
-      padding: 0.25rem 0;
-      border-top: 1px solid black; 
-      white-space: nowrap;
-    }
-    
-    .blank-cell {
-      width: 1rem;
-      border-top: 0;
-    }
-    
-  .small-info {
-    font-size: 0.7rem;
-  }
-  
-  
-  
-  
-  
-  .text-center {
-    text-align: center;
-  }
-  .thick-end {
-    border-bottom: 10px solid black;
-  }
-  .thin-end {
-    border-bottom: 1px solid black;
-  }
-  .foodiePad {
-      margin-left:50px;
+  #nutritionfacts { 
+    height:400px;
+    width:250px;
+    background-color:white; 
+    border:1px solid black; 
+    margin-left:50px;
       margin-top:100px;
-  }
+}
+#nutritionfacts td { 
+    color:black; 
+    font-family:'Arial Black','Helvetica Bold',sans-serif; 
+    font-size:8pt; 
+    padding:0; 
+}
+#nutritionfacts td.header { 
+    font-family:'Arial Black','Helvetica Bold',sans-serif; 
+    font-size:28px; 
+    white-space:nowrap; 
+}        
+#nutritionfacts div.label { 
+    float:left; 
+    font-family:'Arial Black','Helvetica Bold',sans-serif; 
+}
+#nutritionfacts div.serving { 
+    font-family:Arial,Helvetica,sans-serif; 
+    font-size:8pt; 
+    text-align:center; 
+}
+#nutritionfacts div.weight { 
+    display:inline; 
+    font-family:Arial,Helvetica,sans-serif; 
+    padding-left:1px; 
+}
+#nutritionfacts div.dv { 
+    display:inline; 
+    float:right; 
+    font-family:'Arial Black','Helvetica Bold',sans-serif; 
+}
+#nutritionfacts table.vitamins td {  
+    font-family:Arial,Helvetica,sans-serif; 
+    white-space:nowrap; 
+    width:33%; 
+}
+#nutritionfacts div.line { 
+    border-top:1px solid black; 
+}
+#nutritionfacts div.labellight { 
+    float:left; 
+    font-family:Arial,Helvetica,sans-serif; 
+}
+#nutritionfacts .highlighted {
+    border:1px dotted grey;
+    padding:2px;
+}
